# cpp-modern-2024-09-10

./: .clang-format  .gitignore  .runsettings  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  Dockerfile.alt  devcontainer.json
_exercises/ex-auto-declarations/: auto_declarations_ex.cpp
_exercises/ex-compare/: CMakeLists.txt  comparisons.cpp
_exercises/ex-concepts/: CMakeLists.txt  concepts_and_constraints.cpp
_exercises/ex-ctad/: class_templ_arg_deduction.cpp
_exercises/ex-enable-if/: test_copy_optimization.cpp
_exercises/ex-fold-expressions/: CMakeLists.txt  fold_ex.cpp
_exercises/ex-move-semantics/: move_ex.cpp
_exercises/ex-optional/: optional_ex.cpp
_exercises/ex-ranges/: CMakeLists.txt  ranges.cpp
_exercises/ex-string-view/: string_view_ex.cpp
_exercises/ex-variant/: visitors_ex.cpp
compare/: CMakeLists.txt  comparisons.cpp  integer_comparisons.cpp
compile-time-programming/: compile_time_programming.cpp
concepts/: concept_subsumation.cpp  concepts_and_constraints.cpp
helpers/: CMakeLists.txt  gadget.hpp  helpers.hpp  move_helpers.hpp  random.hpp
move-semantics/: move_semantics_1.cpp  move_semantics_2.cpp  move_semantics_3.cpp  move_semantics_motivation.cpp  perfect_forwarding.cpp
ranges/: ranges_and_views.cpp
sfinae/: sfinae.cpp
type-deduction/: functions_with_auto.cpp  type_deduction.cpp
type-traits/: type_traits.cpp
vocabulary-types/: any.cpp  optional.cpp  span.cpp  string_view.cpp  variant.cpp
